// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchPanel renders search panel 1`] = `
<CreateInstantSearch
  apiKey="key"
  appId="id"
  indexName="index"
  refresh={false}
  root={
    Object {
      "Root": "div",
      "props": Object {
        "className": "ais-InstantSearch__root",
      },
    }
  }
>
  <Panel.LEGACY.Section>
    <AlgoliaSearchBox(AlgoliaSearch) />
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section
    className="Results"
  >
    <AlgoliaHits(Hits)
      hitComponent={[Function]}
    />
  </Panel.LEGACY.Section>
</CreateInstantSearch>
`;

exports[`SearchPanel renders search panel with default search text 1`] = `
<CreateInstantSearch
  apiKey="key"
  appId="id"
  indexName="index"
  refresh={false}
  root={
    Object {
      "Root": "div",
      "props": Object {
        "className": "ais-InstantSearch__root",
      },
    }
  }
>
  <Panel.LEGACY.Section>
    <AlgoliaSearchBox(AlgoliaSearch)
      defaultSearchText="example"
    />
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section
    className="Results"
  >
    <AlgoliaHits(Hits)
      hitComponent={[Function]}
    />
  </Panel.LEGACY.Section>
</CreateInstantSearch>
`;
